# coulomb_matrix

./: .gitignore  README.md  coulomb_config.toml  create_coulomb_matrix.py  create_ijji_matrix.py  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  xsf_to_npy.ipynb  xsf_to_npy.py
examples/: README.md  analyze_output.ipynb  coulomb_config.toml
examples/input-files/: wannier90_00001.xsf  wannier90_00002.xsf  wannier90_00003.xsf
src/coulomb_matrix/: __init__.py  commands.py  config.py  coulomb_core.py  create_coulomb_matrix.py  eri_utils.py  grid_utils.py  ijji.py  j_matrix.py  mpi_utils.py  v_matrix.py  xsf.py
tests/: test_config.py  test_distribution.py  test_grid_utils.py  test_integration_vj.py
