[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coulomb-matrix"
version = "0.1.0"
description = "Tools to compute Coulomb integrals from Wannier functions"
authors = [ { name="A. Winka" } ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "ase",
    "gpaw",
]

# entry-points table
[project.scripts]
# Keep CLI names stable
xsf-to-npy = "coulomb_matrix.commands:xsf_to_npy"
coulomb-matrix = "coulomb_matrix.commands:coulomb_matrix"
coulomb-exchange = "coulomb_matrix.commands:coulomb_exchange"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
