[metadata]
name = coulomb-matrix
version = 0.1.0
description = Coulomb matrix utilities
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xsf-to-npy = coulomb_matrix.commands:xsf_to_npy
    coulomb-v-ijij = coulomb_matrix.commands:coulomb_v_ijij
    coulomb-v-ijji = coulomb_matrix.commands:coulomb_v_ijji
