[metadata]
name = coulomb-matrix
version = 0.1.0
description = Coulomb matrix utilities
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    xsf-to-npy = coulomb_matrix.commands:xsf_to_npy
    coulomb-matrix = coulomb_matrix.commands:coulomb_matrix
    coulomb-exchange = coulomb_matrix.commands:coulomb_exchange
